--- a/french-soup/styles/style.css
+++ b/french-soup/styles/style.css
@@ -5,5 +5,71 @@ h1, body, html, main {
 /*Import the font and set the default size*/
 html {
   font-family: 'Open Sans', sans-serif;
-  font-size: 18px
+  font-size: 16px
 }
+
+
+body {
+  font-family: sans-serif;
+  color: grey;    
+}
+
+header {
+  background-image: url(../images/soup.jpg);
+  background-position: 0 0;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 80vh;
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+h1 {
+  color: white;
+  font-weight: lighter;
+  font-size: 4em;
+  text-align:center;
+  line-height: 10em;
+}
+
+h2 {
+  color: rgb(41, 49, 51);
+  font-weight: lighter;
+  margin-left: 3em;
+}
+
+hr {
+  margin: 40px auto 30px auto;
+  width: 85%;
+}
+
+.Intro p{
+  font-size: 20px;
+  margin: 3em;
+  padding: 10px;
+  text-align: left;
+  display: flex;
+  align-content: center;
+  font-weight: lighter;
+}
+
+.Directions p{
+  margin-left: 4em;
+  padding: 10px;
+  font-weight: lighter;
+}
+
+li {
+  list-style: none;
+  margin-left: 3em;
+  font-weight: lighter;
+}
+
+img {
+  display:block;
+  margin-left:auto;
+  margin-right: auto;
+  max-width: 300px;
+}
+
+
